--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,1 +1,9 @@
-test again the CI/CD
+# Testing requirements
+pytest>=7.0.0
+pytest-cov>=3.0.0
+coverage>=6.0.0
+unittest2>=1.1.0
+
+# Development tools
+flake8>=4.0.0
+black>=22.0.0
